Rename classes to keep old name